dark mode media queries fixed

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -71,7 +71,8 @@
   .css-1j529ay {
     padding: 20px 9px;
   }
-  .css-t02unw {
+  .css-t02unw,
+  span.css-5sd03k {
     margin-right: 1rem;
   }
 }
